# kotanima_fast_server

./: .gitignore  pyproject.toml
kotanima_fast/: database.py  main.py
tests/: test_kotanima_fast.py
