[tool.poetry]
name = "kotanima-fast"
version = "0.1.0"
description = ""
authors = ["b0und <f1arenova1@gmail.com>"]

# pip install --pre psycopg[binary]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
Hypercorn = "^0.11.2"
requests = "^2.26.0"
python-dotenv = "^0.19.0"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
